{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "9b097d65-d071-4609-ba0c-3236ecb599ea",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "7e1feafc-b890-46b3-94b7-63057f99b83f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "308170ac-727e-4053-ac0d-ae3196aeb912",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "722a88cc-d79c-45e6-b81e-e80e6a5e24fc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "556ee5ec-4e31-4dab-b93d-736cc904958d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ca18cd40-018b-41d0-8b14-3c38c9e62aca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e308fb14-5c76-4c3c-aef6-f6c0936b815d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c20d9fed-7792-4358-956b-dfc6111b2c1a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ce9f6814-cf88-4f35-8e7c-0880ad58bf03",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "85c69dce-f3ec-4b6b-bb7c-907436aa85bf",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "dd15b335-4b57-4042-950d-447c54526cc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f77fa461-2041-44ee-b8ad-d2bd8f766b74",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogue",
            "id": "e751f297-915c-4d88-aa8a-944eb159e40a",
            "actions": [
                {
                    "name": "Speak",
                    "type": "Button",
                    "id": "76bfe3c7-4e3f-4df3-8cbe-09b5d9b2f417",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5293163-bd7c-4421-a17a-416747d67f7f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speak",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}